pinyougou-shop-web-goods-enter-category

--- a/pinyougou-shop-web/src/main/webapp/admin/goods_edit.html
+++ b/pinyougou-shop-web/src/main/webapp/admin/goods_edit.html
@@ -25,12 +25,13 @@
 
 	<script src="/js/base.js"></script>
 	<script src="/js/service/goodsService.js"></script>
+	<script src="/js/service/itemCatService.js"></script>
 	<script src="/js/service/uploadService.js"></script>
 	<script src="/js/controller/baseController.js"></script>
 	<script src="/js/controller/goodsController.js"></script>
 </head>
 
-<body class="hold-transition skin-red sidebar-mini" ng-app="pinyougou" ng-controller="goodsController">
+<body class="hold-transition skin-red sidebar-mini" ng-app="pinyougou" ng-controller="goodsController" ng-init="selectItemCat1List()">
 
             <!-- 正文区域 -->
             <section class="content">
@@ -69,17 +70,17 @@
 		                           	  	<table>
 		                           	  		<tr>
 		                           	  			<td>
-		                           	  				<select class="form-control" >														
+		                           	  				<select class="form-control" ng-model="entity.tbGoods.category1Id" ng-options="item.id as item.name for item in itemCat1List" >
 		                           	  				</select>
 		                              			</td>
 		                              			<td>
-		                           	  				<select class="form-control select-sm" ></select>
+		                           	  				<select class="form-control select-sm" ng-model="entity.tbGoods.category2Id" ng-options="item.id as item.name for item in itemCat2List" ></select>
 		                              			</td>
 		                              			<td>
-		                           	  				<select class="form-control select-sm" ></select>
+		                           	  				<select class="form-control select-sm" ng-model="entity.tbGoods.category3Id" ng-options="item.id as item.name for item in itemCat3List"></select>
 		                              			</td>
 		                              			<td>
-		                           	  				模板ID:19
+		                           	  				模板ID:{{entity.tbGoods.typeTemplateId}}
 		                              			</td>
 		                           	  		</tr>
 		                           	  	</table>
