pinyougou-shop-web-goods-findSpecList-BE

--- a/pinyougou-shop-web/src/main/webapp/admin/goods_edit.html
+++ b/pinyougou-shop-web/src/main/webapp/admin/goods_edit.html
@@ -26,6 +26,7 @@
 	<script src="/js/base.js"></script>
 	<script src="/js/service/goodsService.js"></script>
 	<script src="/js/service/itemCatService.js"></script>
+	<script src="/js/service/typeTemplateService.js"></script>
 	<script src="/js/service/uploadService.js"></script>
 	<script src="/js/controller/baseController.js"></script>
 	<script src="/js/controller/goodsController.js"></script>
@@ -95,7 +96,7 @@
 		                           
 		                           <div class="col-md-2 title">品牌</div>
 		                           <div class="col-md-10 data">
-		                              <select class="form-control" ></select>
+		                              <select class="form-control" ng-model="entity.tbGoods.brandId" ng-options="item.id as item.text for item in typeTemplate.brandIds"></select>
 		                           </div>
 		
 								   <div class="col-md-2 title">副标题</div>
@@ -166,18 +167,12 @@
                             <!--扩展属性-->
                             <div class="tab-pane" id="customAttribute">
                                 <div class="row data-type">                                
-	                                <div>
-		                                <div class="col-md-2 title">扩展属性1</div>
+	                                <div ng-repeat="pojo in entity.tbGoodsDesc.customAttributeItems">
+		                                <div class="col-md-2 title">{{pojo.text}}</div>
 				                        <div class="col-md-10 data">
-				                              <input class="form-control" placeholder="扩展属性1">	            	 
+				                              <input class="form-control" ng-model="pojo.value" placeholder="{{pojo.text}}">
 				                        </div>
-	                                </div>       
-									<div>
-		                                <div class="col-md-2 title">扩展属性2</div>
-				                        <div class="col-md-10 data">
-				                              <input class="form-control" placeholder="扩展属性2">	            	 
-				                        </div>
-	                                </div>  									
+	                                </div>
                                 </div>
                             </div>
                       
