--- a/pinyougou-shop-web/src/main/webapp/admin/goods_edit.html
+++ b/pinyougou-shop-web/src/main/webapp/admin/goods_edit.html
@@ -210,7 +210,7 @@
 											    </tr>
 								            </thead>
 						                    <tbody>
-						                      <tr ng-repeat="pojo in entity.itemList">
+						                      <tr ng-repeat="pojo in entity.tbItems">
 										            <td ng-repeat="item in entity.tbGoodsDesc.specificationItems">
 										            	{{pojo.spec[item.attributeName]}}
 										            </td>
