pinyougou-shop-web-goods-SKU-isEnableSpec-FE

--- a/pinyougou-shop-web/src/main/webapp/admin/goods_edit.html
+++ b/pinyougou-shop-web/src/main/webapp/admin/goods_edit.html
@@ -181,11 +181,11 @@
                             	<div class="row data-type">
 	                            	<div class="col-md-2 title">是否启用规格</div>
 			                        <div class="col-md-10 data">
-			                        	<input type="checkbox" >			                           
+			                        	<input type="checkbox" ng-model="entity.tbGoods.isEnableSpec" ng-true-value="1" ng-false-value="0">
 			                        </div>
                             	</div>
-                            	<div>
-                            	
+
+                            	<div ng-if="entity.tbGoods.isEnableSpec==1">
 	                                <div class="row data-type">
 		                                <div ng-repeat="pojo in specList">
 			                                <div class="col-md-2 title">{{pojo.text}}</div>
