pinyougou-manager-web-goods-auditing

--- a/pinyougou-shop-web/src/main/webapp/admin/goods.html
+++ b/pinyougou-shop-web/src/main/webapp/admin/goods.html
@@ -47,7 +47,7 @@
                             <div class="pull-left">
                                 <div class="form-group form-inline">
                                     <div class="btn-group">
-                                        <button type="button" class="btn btn-default" title="新建" ><i class="fa fa-file-o"></i> 新建</button>
+										<a href="goods_edit.html" class="btn btn-default">新建</a>
                                         <button type="button" class="btn btn-default" title="删除" ><i class="fa fa-trash-o"></i> 删除</button>
                                         <button type="button" class="btn btn-default" title="提交审核" ><i class="fa fa-check"></i> 提交审核</button>
                                         <button type="button" class="btn btn-default" title="屏蔽" onclick='confirm("你确认要屏蔽吗？")'><i class="fa fa-ban"></i> 屏蔽</button>
