pinyougou-content-manager-content-extraUpdate

--- a/pinyougou-manager-web/src/main/webapp/admin/content.html
+++ b/pinyougou-manager-web/src/main/webapp/admin/content.html
@@ -82,7 +82,7 @@
                                           <td>
                                             <img src="{{entity.pic}}" width="100px" height="50px">
                                           </td>
-                                          <td>{{entity.status}}</td>
+                                          <td>{{status[entity.status]}}</td>
                                           <td>{{entity.sortOrder}}</td>
 		                                 
 		                                  <td class="text-center">                                           
