--- a/pinyougou-search-web/src/main/webapp/search.html
+++ b/pinyougou-search-web/src/main/webapp/search.html
@@ -148,39 +148,34 @@
 			<div class="bread">
 				<ul class="fl sui-breadcrumb">
 					<li>
-						<a href="#">全部结果</a>
-					</li>					
-					<li class="active">智能手机</li>					
+						<a href="#">搜索条件：</a>
+					</li>
 				</ul>
 				<ul class="tags-choose">
-					<li class="tag">全网通<i class="sui-icon icon-tb-close"></i></li>
-					<li class="tag">63G<i class="sui-icon icon-tb-close"></i></li>
+					<li class="tag" ng-if="searchMap.category != ''" ng-click="removeSearchItem('category')">商品分类：{{searchMap.category}}<i class="sui-icon icon-tb-close"></i></li>
+					<li class="tag" ng-if="searchMap.brand != ''" ng-click="removeSearchItem('brand')">品牌：{{searchMap.brand}}<i class="sui-icon icon-tb-close"></i></li>
+					<li class="tag"ng-repeat="(key,value) in searchMap.spec" ng-click="removeSearchItem(key)">{{key}}:{{value}}<i class="sui-icon icon-tb-close"></i></li>
 				</ul>
-				<form class="fl sui-form form-dark">
-					<div class="input-control control-right">
-						<input type="text" />
-						<i class="sui-icon icon-touch-magnifier"></i>
-					</div>
-				</form>
+
 				<div class="clearfix"></div>
 			</div>
 			<!--selector-->
 			<div class="clearfix selector">
-				<div class="type-wrap" ng-if="resultMap.categoryList != null">
+				<div class="type-wrap" ng-if="resultMap.categoryList != null && searchMap.category == ''">
 					<div class="fl key">商品分类</div>
 					<div class="fl value">
 						<span ng-repeat="category in resultMap.categoryList">
-							<a href="#">{{category}}</a>
+							<a href="#" ng-click="addSearchItem('category',category)">{{category}}</a>
 						</span>
 					</div>
 					<div class="fl ext"></div>
 				</div>
-				<div class="type-wrap logo">
+				<div class="type-wrap logo" ng-if="resultMap.brandList != null && searchMap.brand == ''">
 					<div class="fl key brand">品牌</div>
 					<div class="value logos">
 						<ul class="logo-list">
 							<li ng-repeat="brand in resultMap.brandList">
-								<a href="#">{{brand.text}}</a>
+								<a href="#" ng-click="addSearchItem('brand',brand.text)">{{brand.text}}</a>
 							</li>
 						</ul>
 					</div>
@@ -189,12 +184,12 @@
 						<a href="javascript:void(0);">更多</a>
 					</div>
 				</div>
-				<div class="type-wrap" ng-repeat="spec in resultMap.specList">
+				<div class="type-wrap" ng-repeat="spec in resultMap.specList" ng-if="searchMap.spec[spec.text] == null">
 					<div class="fl key">{{spec.text}}</div>
 					<div class="fl value">
 						<ul class="type-list">
 							<li ng-repeat="option in spec.options">
-								<a>{{option.optionName}}</a>
+								<a href="#" ng-click="addSearchItem(spec.text,option.optionName)">{{option.optionName}}</a>
 							</li>
 						</ul>
 					</div>
