--- a/pinyougou-user-web/src/main/webapp/register.html
+++ b/pinyougou-user-web/src/main/webapp/register.html
@@ -10,9 +10,14 @@
 
     <link rel="stylesheet" type="text/css" href="css/webbase.css" />
     <link rel="stylesheet" type="text/css" href="css/pages-register.css" />
+
+	<script type="text/javascript" src="plugins/angularJs/angular.min.js"></script>
+	<script type="text/javascript" src="js/base.js"></script>
+	<script type="text/javascript" src="js/service/userService.js"></script>
+	<script type="text/javascript" src="js/controller/userController.js"></script>
 </head>
 
-<body>
+<body ng-app="pinyougou" ng-controller="userController">
 	<div class="register py-container ">
 		<!--head-->
 		<div class="logoArea">
@@ -26,32 +31,32 @@
 					<div class="control-group">
 						<label class="control-label">用户名：</label>
 						<div class="controls">
-							<input type="text" placeholder="请输入你的用户名" class="input-xfat input-xlarge">
+							<input type="text" ng-model="entity.username" placeholder="请输入你的用户名" class="input-xfat input-xlarge">
 						</div>
 					</div>
 					<div class="control-group">
 						<label for="inputPassword" class="control-label">登录密码：</label>
 						<div class="controls">
-							<input type="password" placeholder="设置登录密码" class="input-xfat input-xlarge">
+							<input type="password" ng-model="entity.password" placeholder="设置登录密码" class="input-xfat input-xlarge">
 						</div>
 					</div>
 					<div class="control-group">
 						<label for="inputPassword" class="control-label">确认密码：</label>
 						<div class="controls">
-							<input type="password" placeholder="再次确认密码" class="input-xfat input-xlarge">
+							<input type="password" ng-model="password" placeholder="再次确认密码" class="input-xfat input-xlarge">
 						</div>
 					</div>
 					
 					<div class="control-group">
 						<label class="control-label">手机号：</label>
 						<div class="controls">
-							<input type="text" placeholder="请输入你的手机号" class="input-xfat input-xlarge">
+							<input type="text" ng-model="entity.phone" placeholder="请输入你的手机号" class="input-xfat input-xlarge">
 						</div>
 					</div>
 					<div class="control-group">
 						<label for="inputPassword" class="control-label">短信验证码：</label>
 						<div class="controls">
-							<input type="text" placeholder="短信验证码" class="input-xfat input-xlarge">  <a href="#">获取短信验证码</a>
+							<input type="text" ng-model="smsCode" placeholder="短信验证码" class="input-xfat input-xlarge">  <a href="#" ng-click="sendCode()">获取短信验证码</a>
 						</div>
 					</div>
 					
@@ -64,7 +69,7 @@
 					<div class="control-group">
 						<label class="control-label"></label>
 						<div class="controls btn-reg">
-							<a class="sui-btn btn-block btn-xlarge btn-danger" href="home.html" target="_blank">完成注册</a>
+							<a class="sui-btn btn-block btn-xlarge btn-danger" ng-click="reg()" target="_blank">完成注册</a>
 						</div>
 					</div>
 				</form>
