--- a/pinyougou-seckill-web/src/main/webapp/seckill-item.html
+++ b/pinyougou-seckill-web/src/main/webapp/seckill-item.html
@@ -13,9 +13,14 @@
     <link rel="stylesheet" type="text/css" href="css/pages-zoom.css" />
     <link rel="stylesheet" type="text/css" href="css/pages-seckill-item.css" />
     <link rel="stylesheet" type="text/css" href="css/widget-cartPanelView.css" />
+
+	<script type="text/javascript" src="plugins/angularJs/angular.min.js">  </script>
+	<script type="text/javascript" src="js/base.js">  </script>
+	<script type="text/javascript" src="js/service/seckillGoodsService.js">  </script>
+	<script src="js/controller/seckillGoodsController.js">  </script>
 </head>
 
-<body>
+<body ng-app="pinyougou" ng-controller="seckillGoodsController" ng-init="findOne()">
 	<!-- 头部栏位 -->
 	<!--页面顶部-->
 <div id="nav-bottom">
@@ -173,14 +178,17 @@ $(function(){
 					<div class="zoom">
 						<!--默认第一个预览-->
 						<div id="preview" class="spec-preview">
-							<span class="jqzoom"><img jqimg="img/_/b1.png" src="img/_/s1.png" /></span>
+							<span class="jqzoom"><img jqimg="{{entity.smallPic}}" src="{{entity.smallPic}}" width="400px" height="400px" /></span>
 						</div>						
 					</div>
 					
 				</div>
 				<div class="fr itemInfo-wrap">
 					<div class="sku-name">
-						<h4>Apple iPhone 6s（A1700）64G玫瑰金色 移动通信电信4G手机</h4>
+						<h4>{{entity.title}}</h4>
+					</div>
+					<div>
+						距离结束：01:56:78
 					</div>
 					<div class="news">
 						<span><img src="img/_/clock.png"/>品优秒杀</span>
@@ -194,11 +202,11 @@ $(function(){
 							</div>
 							<div class="fl price">
 								<i>¥</i>
-								<em>5299.00</em>
-								<span>原价：5699.00</span>
+								<em>{{entity.costPrice}}</em>
+								<span>原价：{{entity.price}}</span>
 							</div>
 							<div class="fr remark">
-								剩余库存：10
+								剩余库存：{{entity.stockCount}}
 							</div>
 						</div>
 						<div class="summary-wrap">
@@ -411,25 +419,10 @@ $(function(){
 						<div class="tab-content tab-wraped">
 							<div id="one" class="tab-pane active">
 								<ul class="goods-intro unstyled">
-									<li>分辨率：1920*1080(FHD)</li>
-									<li>后置摄像头：1200万像素</li>
-									<li>前置摄像头：500万像素</li>
-									<li>核 数：其他</li>
-									<li>频 率：以官网信息为准</li>
-									<li>品牌： Apple</li>
-									<li>商品名称：APPLEiPhone 6s Plus</li>
-									<li>商品编号：1861098</li>
-									<li>商品毛重：0.51kg</li>
-									<li>商品产地：中国大陆</li>
-									<li>热点：指纹识别，Apple Pay，金属机身，拍照神器</li>
-									<li>系统：苹果（IOS）</li>
-									<li>像素：1000-1600万</li>
-									<li>机身内存：64GB</li>
+
 								</ul>
 								<div class="intro-detail">
-									<img src="img/_/intro01.png" />
-									<img src="img/_/intro02.png" />
-									<img src="img/_/intro03.png" />
+									{{entity.introduction}}
 								</div>
 							</div>
 							<div id="two" class="tab-pane">
