pinyougou-seckill-web-item.html-$interval

--- a/pinyougou-seckill-web/src/main/webapp/seckill-item.html
+++ b/pinyougou-seckill-web/src/main/webapp/seckill-item.html
@@ -188,11 +188,11 @@ $(function(){
 						<h4>{{entity.title}}</h4>
 					</div>
 					<div>
-						距离结束：01:56:78
+						距离结束：{{timeString}}
 					</div>
 					<div class="news">
 						<span><img src="img/_/clock.png"/>品优秒杀</span>
-						<span class="overtime">距离结束：01:56:78</span>
+						<span class="overtime">距离结束：{{timeString}}</span>
 						</div>
 					<div class="summary">
 						<div class="summary-wrap">
