--- a/pinyougou-seckill-web/src/main/webapp/seckill-item.html
+++ b/pinyougou-seckill-web/src/main/webapp/seckill-item.html
@@ -247,7 +247,7 @@ $(function(){
 							<div class="fl">
 								<ul class="btn-choose unstyled">
 									<li>
-										<a href="cart.html" target="_blank" class="sui-btn  btn-danger addshopcar">立即抢购</a>
+										<a ng-click="submitOrder()" target="_blank" class="sui-btn  btn-danger addshopcar">立即抢购</a>
 									</li>
 								</ul>
 							</div>
